--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,13 @@ height: 100vh;
   background: linear-gradient(to right, #135058, #f1f2b5) !important; */
 }
 
+.header{
+
+  background-color: #aaa889;
+
+}
+
+
 .main {
   background: url(./assets/shopping5.jpg);
   background-repeat: no-repeat;
@@ -43,6 +50,7 @@ height: 100vh;
 }
 .nav-link {
   color: rgb(26, 25, 25) !important;
+ 
   &:hover {
     color: red !important;
   }
@@ -121,7 +129,7 @@ height: 100vh;
 }
 
 .buttons button:nth-child(1) {
-  border: 1px solid #135058 !important;
+  border: 1px solid #cc0606 !important;
   color: #135058;
   height: 40px;
 }
@@ -154,7 +162,18 @@ height: 100vh;
 
   border:2px solid #6b6a5c;
   width: 50%;
-  margin: auto;
+  margin : auto;
   box-shadow: 3px 3px 3px 2px;
   padding: 2rem;
+}
+
+.cartimg{
+
+  width: 100px;
+  padding-left: 1rem;
+}
+
+.nodata{
+ font-size: 2rem;
+  padding-top: 7rem;
 }
